# src/models/address_list.pb.go
@@ -1,0 +1,162 @@
+// Code generated by protoc-gen-go. DO NOT EDIT.
+// versions:
+// 	protoc-gen-go v1.27.1
+// 	protoc        v3.6.1
+// source: address_list.proto
+
+package models
+
+import (
+	protoreflect "google.golang.org/protobuf/reflect/protoreflect"
+	protoimpl "google.golang.org/protobuf/runtime/protoimpl"
+	reflect "reflect"
+	sync "sync"
+)
+
+const (
+	// Verify that this generated code is sufficiently up-to-date.
+	_ = protoimpl.EnforceVersion(20 - protoimpl.MinVersion)
+	// Verify that runtime/protoimpl is sufficiently up-to-date.
+	_ = protoimpl.EnforceVersion(protoimpl.MaxVersion - 20)
+)
+
+type AddressList struct {
+	state         protoimpl.MessageState
+	sizeCache     protoimpl.SizeCache
+	unknownFields protoimpl.UnknownFields
+
+	Address string `protobuf:"bytes,1,opt,name=address,proto3" json:"address"`
+	//uint64 transaction_count = 2;
+	Balance float64 `protobuf:"fixed64,3,opt,name=balance,proto3" json:"balance"`
+	Type    string  `protobuf:"bytes,4,opt,name=type,proto3" json:"type"`
+}
+
+func (x *AddressList) Reset() {
+	*x = AddressList{}
+	if protoimpl.UnsafeEnabled {
+		mi := &file_address_list_proto_msgTypes[0]
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		ms.StoreMessageInfo(mi)
+	}
+}
+
+func (x *AddressList) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*AddressList) ProtoMessage() {}
+
+func (x *AddressList) ProtoReflect() protoreflect.Message {
+	mi := &file_address_list_proto_msgTypes[0]
+	if protoimpl.UnsafeEnabled && x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use AddressList.ProtoReflect.Descriptor instead.
+func (*AddressList) Descriptor() ([]byte, []int) {
+	return file_address_list_proto_rawDescGZIP(), []int{0}
+}
+
+func (x *AddressList) GetAddress() string {
+	if x != nil {
+		return x.Address
+	}
+	return ""
+}
+
+func (x *AddressList) GetBalance() float64 {
+	if x != nil {
+		return x.Balance
+	}
+	return 0
+}
+
+func (x *AddressList) GetType() string {
+	if x != nil {
+		return x.Type
+	}
+	return ""
+}
+
+var File_address_list_proto protoreflect.FileDescriptor
+
+var file_address_list_proto_rawDesc = []byte{
+	0x0a, 0x12, 0x61, 0x64, 0x64, 0x72, 0x65, 0x73, 0x73, 0x5f, 0x6c, 0x69, 0x73, 0x74, 0x2e, 0x70,
+	0x72, 0x6f, 0x74, 0x6f, 0x12, 0x06, 0x6d, 0x6f, 0x64, 0x65, 0x6c, 0x73, 0x22, 0x55, 0x0a, 0x0b,
+	0x41, 0x64, 0x64, 0x72, 0x65, 0x73, 0x73, 0x4c, 0x69, 0x73, 0x74, 0x12, 0x18, 0x0a, 0x07, 0x61,
+	0x64, 0x64, 0x72, 0x65, 0x73, 0x73, 0x18, 0x01, 0x20, 0x01, 0x28, 0x09, 0x52, 0x07, 0x61, 0x64,
+	0x64, 0x72, 0x65, 0x73, 0x73, 0x12, 0x18, 0x0a, 0x07, 0x62, 0x61, 0x6c, 0x61, 0x6e, 0x63, 0x65,
+	0x18, 0x03, 0x20, 0x01, 0x28, 0x01, 0x52, 0x07, 0x62, 0x61, 0x6c, 0x61, 0x6e, 0x63, 0x65, 0x12,
+	0x12, 0x0a, 0x04, 0x74, 0x79, 0x70, 0x65, 0x18, 0x04, 0x20, 0x01, 0x28, 0x09, 0x52, 0x04, 0x74,
+	0x79, 0x70, 0x65, 0x42, 0x0a, 0x5a, 0x08, 0x2e, 0x2f, 0x6d, 0x6f, 0x64, 0x65, 0x6c, 0x73, 0x62,
+	0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
+}
+
+var (
+	file_address_list_proto_rawDescOnce sync.Once
+	file_address_list_proto_rawDescData = file_address_list_proto_rawDesc
+)
+
+func file_address_list_proto_rawDescGZIP() []byte {
+	file_address_list_proto_rawDescOnce.Do(func() {
+		file_address_list_proto_rawDescData = protoimpl.X.CompressGZIP(file_address_list_proto_rawDescData)
+	})
+	return file_address_list_proto_rawDescData
+}
+
+var file_address_list_proto_msgTypes = make([]protoimpl.MessageInfo, 1)
+var file_address_list_proto_goTypes = []interface{}{
+	(*AddressList)(nil), // 0: models.AddressList
+}
+var file_address_list_proto_depIdxs = []int32{
+	0, // [0:0] is the sub-list for method output_type
+	0, // [0:0] is the sub-list for method input_type
+	0, // [0:0] is the sub-list for extension type_name
+	0, // [0:0] is the sub-list for extension extendee
+	0, // [0:0] is the sub-list for field type_name
+}
+
+func init() { file_address_list_proto_init() }
+func file_address_list_proto_init() {
+	if File_address_list_proto != nil {
+		return
+	}
+	if !protoimpl.UnsafeEnabled {
+		file_address_list_proto_msgTypes[0].Exporter = func(v interface{}, i int) interface{} {
+			switch v := v.(*AddressList); i {
+			case 0:
+				return &v.state
+			case 1:
+				return &v.sizeCache
+			case 2:
+				return &v.unknownFields
+			default:
+				return nil
+			}
+		}
+	}
+	type x struct{}
+	out := protoimpl.TypeBuilder{
+		File: protoimpl.DescBuilder{
+			GoPackagePath: reflect.TypeOf(x{}).PkgPath(),
+			RawDescriptor: file_address_list_proto_rawDesc,
+			NumEnums:      0,
+			NumMessages:   1,
+			NumExtensions: 0,
+			NumServices:   0,
+		},
+		GoTypes:           file_address_list_proto_goTypes,
+		DependencyIndexes: file_address_list_proto_depIdxs,
+		MessageInfos:      file_address_list_proto_msgTypes,
+	}.Build()
+	File_address_list_proto = out.File
+	file_address_list_proto_rawDesc = nil
+	file_address_list_proto_goTypes = nil
+	file_address_list_proto_depIdxs = nil
+}
